--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Zong W Lee Portfolio Site</title>
+		<title>Zong W Lee Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Zong Wesley Lee</h1>
-						<p>Computer Science Engineer with a wide exhibit of abilities from programming, design, and engineering. Love to meet new individuals and learn about new innovations and tech.</p>
+						<p>Developer with a wide exhibit of abilities from programming, design, and engineering. Love to meet new individuals and learn about new innovations and tech.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -34,109 +34,137 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="#skills">Skills</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#education">Education</a></li>
+							<li><a href="#contact">Contact</a></li>
+							
+							<li><a href="https://drive.google.com/file/d/1eyuEi0L6gOa3ychHnhGYx5SD86e5jznu/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/zong-lee-a75375157" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/zongwesleylee" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2>About Me</h2>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+									<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>
+										My name is Zong Wesley Lee. I've recieved a B.S. in Computer Science and Engineering
+										from the School of Engineering, UC Merced. I'm a developer, nerd, and an OpenSource devotee. 
+										I'm exceptionally passionate about programming and engineering. I fundamentally work on the backend 
+										and I am very enamored with complex systems
+										that require critical thinking abilities and logic. 
+										I have insight in conveying answers for fascinating issues.
+										I love sports, listening to music, and traveling.</p>
+									
 							</article>
 
 						<!-- Posts -->
+						<div class="box alt">
+							<header>
+								<style>
+									h1 {text-align: center;}
+								</style>
+								<h1 id="skills">Skills</h1>
+							</header>
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/java.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/clogo.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/git.png" alt="" /></span></div>
+								<!-- Break -->
+								<div class="col-4"><span class="image fit"><img src="images/pyt.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/html.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/open.png" alt="" /></span></div>
+								<!-- Break -->
+								<div class="col-4"><span class="image fit"><img src="images/linux.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/docker.png" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/matlab.png" alt="" /></span></div>
+							</div>
+						</div>
+
+							<header>
+								<h1 id="projects">Projects</h1>
+							</header>
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2 id="aes">Encryption Algorithm for AES</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="aes.html" class="image fit"><img src="images/rij.png" alt="" /></a>
+									<p>Implemented encryption algorithm of the Advanced Encryption System (AES) for 128 bit key, assuming the plaintext input message is always the length of 128 bits.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="aes.html" class="button">Learn More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2 id="interpreter">MIPS Interpreter</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="interpreter.html" class="image fit"><img src="images/inter.png" alt="" /></a>
+									<p>Implemented an instruction interpreter for a subset of MIPS code that will fetch, disassemble, decode and execute MIPS machine instructions to simulate each state in computation.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="interpreter.html" class="button">Learn More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2 id="cache">MIPS Cache Logic</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="cache.html" class="image fit"><img src="images/cache.png" alt="" /></a>
+									<p>Implemented a cache logic behind cache so that a MIPS simulator will be able to run MIPS instructions.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="cache.html" class="button">Learn More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2 id="patientlogger">Patient-Logger</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="patient.html" class="image fit"><img src="images/patientlog.png" alt="" /></a>
+									<p>Collaborated with multiple team members to design and develop software for clinical sensor to log data for patients.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="patient.html" class="button">Learn More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2 id="glutapp">GlutAppGame</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="glut.html" class="image fit"><img src="images/space.png" alt="" /></a>
+									<p>Created clean programs in Linux utilizing the gcc compiler and makefiles to demonstrate concepts of object-oriented design.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="glut.html" class="button">Learn More</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							</section>
+							<section>
+								<header>
+									<h1 id="education">Education</h1>
+									<h3>Merced College | Merced, CA | 2016 – 2018</h3>
+										<p>Associate of Science - Computer Science<br>
+											Associate of Science - Mathematics<br>
+											Associate of Science - Physics</p>
+									<h3>University of California Merced | Merced, CA | 2018 – 2021</h3>
+										<p>Bachelor of Science - Computer Science and Engineering</p>
+								</header>
+
 							</section>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<header>
+								<h2 id="contact">Contact Me</h2>
+							</header>
+							<form method="post" action="mailto:zongwesleylee@outlook.com" enctype="text/plain">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -158,31 +186,30 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p>(209) 500-9225</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">zongwesleylee@gmail.com</a></p>
+								<p><a href="mailto:zongwesleylee@outlook.com">zongwesleylee@outlook.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/zong-lee-a75375157" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/zongwesleylee" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
+							</section>
+							<section>
+								<h3>Resume</h3>
+								<a href="images" download="resume-zong-lee.pdf" class="button icon regular fa-file-pdf">Download</a></li>
 							</section>
 						</section>
 					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
